Fixed: Included the Terms and Conditions premium plugin in the LITE version ( [#1445](https://github.com/WPChill/download-monitor/issues/1445) )
Changed: Enhanced display of settings descriptions. ( [#1444](https://github.com/WPChill/download-monitor/issues/1444) )
Changed: Multiple allowed uploads path and setting redesign ( [#1447](https://github.com/WPChill/download-monitor/issues/1447) )

= 4.9.12 - 11.04.2024 =
Fixed: Lite vs Premium page not showing when a license is not added.( [#1441](https://github.com/WPChill/download-monitor/issues/1441) )

= 4.9.11 - 16.02.2024 =
Changed: Removed Freemius
Fixed: Slight UI fixes

= 4.9.10 - 05.02.2024 =
Fixed: Versions download link for the "Version list" template ( [#1422](https://github.com/WPChill/download-monitor/issues/1422) )

= 4.9.9 - 30.01.2024 =
Fixed: Performance issue fix

= 4.9.8 - 25.01.2024 =
Fixed: Products update problem ( [#1415](https://github.com/WPChill/download-monitor/issues/1415) )
Fixed: PHP Warnings on non-defined Download templates ( [#1413](https://github.com/WPChill/download-monitor/issues/1413) )

= 4.9.7 - 23.01.2024 =
Fixed: [] operator not supported for strings error. ( [#1409](https://github.com/WPChill/download-monitor/issues/1409) )
Fixed: User reports not showing user name & role. ( [#1410](https://github.com/WPChill/download-monitor/issues/1410) )

= 4.9.6 - 22.01.2024 =
Changed: Moved, removed and updated admin settings for "General" section ( [#1346](https://github.com/WPChill/download-monitor/issues/1346) )
Changed: Moved, renamed and updated admin settings for "Shop" section ( [#1347](https://github.com/WPChill/download-monitor/issues/1347) )
Changed: Moved, removed and updated admin settings for "Advanced" section ( [#1348](https://github.com/WPChill/download-monitor/issues/1348) )
Changed: Prevent Duplicate Downloads ON by default on production(live) websites.  ( [#1350](https://github.com/WPChill/download-monitor/issues/1350) )