@@ -599,6 +599,8 @@ class DLM_Admin_List_Table extends WP_List_Table {
 		$posts_columns['version']         = __( 'Version', 'download-monitor' );
 		$posts_columns['shortcode']       = __( 'Shortcode', 'download-monitor' );
 		$posts_columns['download_link']   = __( 'Download link', 'download-monitor' );
+		$posts_columns['file_location']   = __( 'File Location', 'download-monitor' );
+		$posts_columns['file_type']       = __( 'File Type', 'download-monitor' );
 		$posts_columns['download_tag']    = __( 'Tags', 'download-monitor' );
 		$posts_columns['download_count']  = __( 'Download count', 'download-monitor' );
 		$posts_columns['featured']        = __( 'Featured', 'download-monitor' );
@@ -683,6 +685,7 @@ class DLM_Admin_List_Table extends WP_List_Table {
 			'featured'        => array( 'featured' ),
 			'locked_download' => array( 'locked_download' ),
 			'redirect_only'   => array( 'redirect_only' ),
+			'file_type'       => array( 'file_type' ),
 		);
 
 		/**
@@ -1040,6 +1043,31 @@ class DLM_Admin_List_Table extends WP_List_Table {
 				break;
 			case 'download_count':
 				echo number_format( $item->get_download_count(), 0, '.', ',' );
+				break;
+			case 'file_location':
+				$file  = $item->get_version();
+				$path  = $file->get_url();
+				$loc   = __( 'Unknown', 'download_monitor' );
+				$class = 'dlm_file_path_unknown';
+				if ( NULL != $path ) {
+					$file_manager = new DLM_File_Manager();
+					list( $file_path, $remote_file ) = $file_manager->parse_file_path( $path );
+					if ( $remote_file ) {
+						$loc   = __( 'Remote', 'download_monitor' );
+						$class = 'dlm_file_path_remote';
+					}else{
+						$loc   = __( 'Local', 'download_monitor' );
+						$class = 'dlm_file_path_local';
+					}
+				}
+
+				echo '<span class="'. esc_attr( $class ) .'">' . esc_html( $loc ) . '</span>';
+				break;
+			case 'file_type':
+				$file  = $item->get_version();
+				$type  = $file->get_filetype();
+
+				echo '<span class="dlm_file_type_info">' . strtoupper( esc_html( $type ) ) . '</span>';
 				break;
 		}
 	}
